<package>
  <name>moveit_grasps</name>
  <version>2.0.0</version>
  <description>
    A basic grasp generator for objects such as blocks or cylinders for use with the MoveIt! pick and place pipeline.
    Does not consider friction cones or other dynamics.
  </description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="mcevoy.andy@gmail.com">Andy McEvoy</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/PickNikRobotics/moveit_grasps/</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/moveit_grasps/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/moveit_grasps</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <author email="mcevoy.andy@gmail.com">Andy McEvoy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>panda_moveit_config</test_depend>

</package>
